fix sticky navbar, fix consultation form, translate cookies, fix refresh in dashboard

--- a/api-clinic/locales/en.json
+++ b/api-clinic/locales/en.json
@@ -43,7 +43,7 @@
     "carousel_best_medical_care": "The Best Medical Care",
     "carousel_team_assistance": "Our team of doctors is ready to assist you.",
     "carousel_comprehensive_services": "Comprehensive Medical Services",
-    "carousel_comprehensive_sections":"Comprehensive Medical Sections",
+    "carousel_comprehensive_sections": "Comprehensive Medical Sections",
     "carousel_high_quality_healthcare": "High-quality healthcare in a comfortable and safe environment",
     "appointment_schedule": "Schedule Your Appointment Now",
     "patient_name": "Patient's Name",
@@ -77,6 +77,29 @@
     "links": "Links",
     "enter_name": "Enter your name",
     "home": "Home",
-    "estenosis":"Stenosis",
-    "fracturas":"Fractures"
+    "estenosis": "Stenosis",
+    "fracturas": "Fractures",
+    "cookie_policy_title": "COOKIE POLICY",
+    "cookie_policy_introduction": "This website uses cookies to ensure you get the best experience. <a href=\"#\">Learn more</a>.",
+    "learn_more": "Learn more",
+    "what_are_cookies_title": "What are cookies?",
+    "what_are_cookies_description": "A cookie is a small text file that is stored in your browser when you visit almost any website. Its purpose is to enable the website to remember your visit when you return to that page. Cookies typically store technical information, personal preferences, content customization, usage statistics, links to social networks, access to user accounts, and more.",
+    "cookies_purpose": "The objective of cookies is to tailor the website's content to your profile and needs. Without cookies, the services offered by any website would be significantly reduced. If you would like more information about what cookies are, what they store, how to delete or disable them, please refer to this link.",
+    "cookies_used_title": "Cookies Used on This Website",
+    "cookies_used_description": "In accordance with the guidelines of the Spanish Data Protection Agency, we detail below the use of cookies on this website to inform you as accurately as possible.",
+    "first_party_cookies_title": "First-Party Cookies:",
+    "session_cookies_description": "<strong>Session cookies</strong>: Ensure that users who post comments on the blog are human and not automated applications. This helps combat spam.",
+    "third_party_cookies_title": "Third-Party Cookies:",
+    "google_analytics_description": "<strong>Google Analytics</strong>: Stores cookies to generate statistics on website traffic and visitor volume. By using this website, you consent to Google's processing of your information. Therefore, if you wish to exercise any rights in this regard, you must communicate directly with Google.",
+    "social_media_description": "<strong>Social Media</strong>: Each social network uses its own cookies to enable actions such as clicking 'Like' or sharing content.",
+    "disabling_deleting_cookies_title": "Disabling or Deleting Cookies",
+    "disabling_deleting_cookies_description": "At any time, you may exercise your right to disable or delete cookies from this website. These actions are carried out differently depending on the browser you are using. Here is a quick guide for the most popular browsers.",
+    "additional_notes_title": "Additional Notes",
+    "additional_notes_description": "Neither this website nor its legal representatives are responsible for the content or accuracy of the privacy policies of third parties mentioned in this cookie policy.",
+    "browser_responsibility_description": "Web browsers are the tools responsible for storing cookies, and it is from these browsers that you must exercise your right to delete or disable them. Neither this website nor its legal representatives can guarantee the proper or improper handling of cookies by said browsers.",
+    "cookie_reminder_description": "In some cases, cookies must be installed to ensure that the browser remembers your decision not to accept them.",
+    "google_analytics_cookies_title": "Google Analytics Cookies",
+    "google_analytics_cookies_description": "In the case of Google Analytics cookies, this company stores them on servers located in the United States and is committed not to share them with third parties, except in cases where it is necessary for system operation or when required by law. According to Google, it does not save your IP address. Google Inc. is a company adhered to the Safe Harbor Agreement, which guarantees that all transferred data will be treated with a level of protection in accordance with European regulations.",
+    "cookie_policy_text": "This website uses cookies to ensure you get the best experience.",
+    "accept_cookies": "Accept"
 }
