--- a/api-clinic/locales/es.json
+++ b/api-clinic/locales/es.json
@@ -43,7 +43,7 @@
     "carousel_best_medical_care": "La Mejor Atención Médica",
     "carousel_team_assistance": "Nuestro equipo de médicos está listo para ayudarte.",
     "carousel_comprehensive_services": "Servicios Médicos Integrales",
-    "carousel_comprehensive_sections":"Comprehensive Medical Sections",
+    "carousel_comprehensive_sections": "Comprehensive Medical Sections",
     "carousel_high_quality_healthcare": "Atención médica de alta calidad en un entorno cómodo y seguro",
     "appointment_schedule": "Agenda tu cita ahora",
     "patient_name": "Nombre del paciente",
@@ -77,6 +77,29 @@
     "links": "Enlaces",
     "enter_name": "Introduce tu nombre",
     "home": "Inicio",
-    "estenosis":"Estenosis",
-    "fracturas":"Fracturas"
+    "estenosis": "Estenosis",
+    "fracturas": "Fracturas",
+    "cookie_policy_title": "POLÍTICA DE COOKIES",
+    "cookie_policy_introduction": "Este sitio web utiliza cookies para garantizar que obtenga la mejor experiencia. <a href=\"#\">Aprende más</a>.",
+    "learn_more": "Aprende más",
+    "what_are_cookies_title": "¿Qué son las cookies?",
+    "what_are_cookies_description": "Una cookie es un pequeño archivo de texto que se almacena en tu navegador cuando visitas casi cualquier sitio web. Su propósito es permitir que el sitio web recuerde tu visita cuando regreses a esa página. Las cookies suelen almacenar información técnica, preferencias personales, personalización de contenido, estadísticas de uso, enlaces a redes sociales, acceso a cuentas de usuario y más.",
+    "cookies_purpose": "El objetivo de las cookies es adaptar el contenido del sitio web a tu perfil y necesidades. Sin cookies, los servicios ofrecidos por cualquier sitio web se reducirían considerablemente. Si deseas obtener más información sobre qué son las cookies, qué almacenan, cómo eliminarlas o deshabilitarlas, consulta este enlace.",
+    "cookies_used_title": "Cookies utilizadas en este sitio web",
+    "cookies_used_description": "De acuerdo con las directrices de la Agencia Española de Protección de Datos, detallamos a continuación el uso de cookies en este sitio web para informarte de la manera más precisa posible.",
+    "first_party_cookies_title": "Cookies de primera parte:",
+    "session_cookies_description": "<strong>Cookies de sesión</strong>: Aseguran que los usuarios que publican comentarios en el blog sean humanos y no aplicaciones automatizadas. Esto ayuda a combatir el spam.",
+    "third_party_cookies_title": "Cookies de terceros:",
+    "google_analytics_description": "<strong>Google Analytics</strong>: Almacena cookies para generar estadísticas sobre el tráfico del sitio web y el volumen de visitantes. Al usar este sitio web, consientes el procesamiento de tu información por parte de Google. Si deseas ejercer algún derecho al respecto, debes comunicarte directamente con Google.",
+    "social_media_description": "<strong>Redes sociales</strong>: Cada red social utiliza sus propias cookies para habilitar acciones como hacer clic en 'Me gusta' o compartir contenido.",
+    "disabling_deleting_cookies_title": "Deshabilitar o eliminar cookies",
+    "disabling_deleting_cookies_description": "En cualquier momento, puedes ejercer tu derecho a deshabilitar o eliminar las cookies de este sitio web. Estas acciones se realizan de manera diferente dependiendo del navegador que utilices. Aquí tienes una guía rápida para los navegadores más populares.",
+    "additional_notes_title": "Notas adicionales",
+    "additional_notes_description": "Ni este sitio web ni sus representantes legales son responsables del contenido o la precisión de las políticas de privacidad de terceros mencionadas en esta política de cookies.",
+    "browser_responsibility_description": "Los navegadores web son las herramientas responsables de almacenar las cookies, y es a través de estos navegadores que debes ejercer tu derecho a eliminarlas o deshabilitarlas. Ni este sitio web ni sus representantes legales pueden garantizar el manejo adecuado o inadecuado de las cookies por parte de dichos navegadores.",
+    "cookie_reminder_description": "En algunos casos, es necesario instalar cookies para asegurarse de que el navegador recuerde tu decisión de no aceptarlas.",
+    "google_analytics_cookies_title": "Cookies de Google Analytics",
+    "google_analytics_cookies_description": "En el caso de las cookies de Google Analytics, esta empresa las almacena en servidores ubicados en los Estados Unidos y se compromete a no compartirlas con terceros, excepto en los casos en que sea necesario para el funcionamiento del sistema o cuando la ley lo requiera. Según Google, no guarda tu dirección IP. Google Inc. es una empresa adherida al Acuerdo de Puerto Seguro, lo que garantiza que todos los datos transferidos se tratarán con un nivel de protección conforme a la normativa europea.",
+    "cookie_policy_text": "Este sitio web utiliza cookies para asegurarte de obtener la mejor experiencia.",
+    "accept_cookies": "Aceptar"
 }
